feat: expand test coverage to 171 tests, add email/audit/rate-limit/CORS/ErrorBoundary
- P1: 88 new tests across 10 services (171 total, all green)
- P2: EmailService with @Async + JavaMailSender
- P3: Audit Log (AOP @Auditable, V24 migration, entity+repo)
- P4: CORS configurable via cors.allowed-origins property
- P5: Rate Limiting with Bucket4j (50 req/min per IP)
- P7: Frontend ErrorBoundary + LoadingSpinner components